# DagorEngine

./: .gitignore  .gitmodules  CMakeLists.txt  build_cmake.py  genindex.html  index.html  search.html
api-references/: index.html
api-references/dagor-dshl/: index.html
api-references/dagor-dshl/index/: basic-concepts.html  channels.html  directives.html  global-constants.html  intrinsics.html  introduction.html  keywords.html  materials.html  pipeline-states.html  shaders.html
api-references/dagor-dshl/index/basic-concepts/: conditionals.html  data-types.html  error.html  hardware.html  includes.html  intervals.html  macros.html
api-references/dagor-ecs/: dagor_ecs.html  index.html  schemeful_events.html
api-references/dagor-engine-docs/: index.html
api-references/dagor-engine-docs/picture_image/: Image.html  PictureManager.html  index.html
api-references/dagor-render/: index.html
api-references/dagor-render/index/: d3dAPI.html  d3dHelpers.html  daBFG.html  resMgr.html  resourceSlot.html
api-references/dagor-render/index/d3dAPI/: Barrier.html  Bindless.html  Buffers.html  Command.html  Dispatch.html  DispatchMesh.html  Draw.html  Heap.html  Info.html  Lock.html  MatricesAndPerspective.html  Query.html  RenderPass.html  RenderState.html  RenderTarget.html  ResUpdateBuffer.html  Resource.html  RwResource.html  Sampler.html  Shader.html  ShaderConstants.html  TiledResource.html  VariableRateShading.html  VertexIndexBuffer.html  ViewScissor.html  constants.html  other.html  textures.html
api-references/dagor-render/index/d3dHelpers/: multidrawContext.html
api-references/dagor-render/index/daBFG/: bfg_ecs.html  core.html  das.html  (+4 more)
api-references/quirrel-modules/: index.html
api-references/quirrel-modules/dargbox/: gamelib.input.html  index.html
assets/: index.html
assets/about-assets/: about_assets.html  index.html
assets/about-assets/how-to-test-assets-on-maps/: how_to_test_assets_on_maps.html  index.html
assets/about-assets/ladders/: climbable_ladders.html  index.html  navmesh_gen_vert_ladders.html
assets/about-assets/occluder/: index.html  occluder_box.html
assets/all-about-blk/: application_blk.html  composit_blk.html  config_and_settings_blk.html  folder_blk.html  index.html  skeleton_blk.html  spline_blk.html
assets/animations/: animation_export.html  index.html
assets/lighting/: adding_light_fixtures_to_building_composites.html  flickering_lights.html  index.html  lighting_catalog.html  lights.html  lights_creation_guide.html  photometric_lights.html  replacing_or_modifying_lights.html
assets/materials/: index.html  proxymats.html
assets/shaders/: index.html  land_mesh_combined_decal_family.html  rendinst_interior_mapping.html  rendinst_layered.html  rendinst_layered_family.html  rendinst_layered_lightmap.html  rendinst_parallax_ice.html  rendinst_perlin_layered.html  rendinst_simple_emissive.html  simple_aces_detailed.html
assets/shaders/dng-shaders/: dynamic_painted_by_mask.html  index.html  land_mesh_height_decal.html  rendinst_blend_diffuse_decal.html  rendinst_blend_normal_decal.html  rendinst_deferred_decal.html  rendinst_deferred_modulate2x_decal.html  rendinst_emissive.html  rendinst_flag_colored.html  rendinst_flag_layered.html  rendinst_mask_layered.html  rendinst_modulate2x_diffuse_decal.html  rendinst_refraction.html  rendinst_simple.html  rendinst_simple_emissive_anim.html  rendinst_simple_glass.html  rendinst_simple_painted.html  rendinst_tree_colored.html  rendinst_tree_perlin_layered.html  rendinst_vcolor_layered.html
cmake/Modules/: CommonCppFlags.cmake  DagorDependencies.cmake  DagorFunctions.cmake  DagorShaders.cmake  StringifyFile.cmake
cmake/Platform/: DagorPlatform.cmake  Linux.cmake  MacOS.cmake  Windows.cmake  linux_platform.h
dagor-home/: dagor_engine.html  index.html
dagor-home/documentation/: contributing_to_docs.html  how_to_build_docs_locally.html  index.html
dagor-home/documentation/qdox-user-guide/: index.html  qdox.html  rst-cheatsheet.html
dagor-tools/: index.html
dagor-tools/addons/: index.html
dagor-tools/addons/3ds-max/: index.html
dagor-tools/addons/blender/: index.html
dagor-tools/asset-viewer/: index.html
dagor-tools/asset-viewer/asset-viewer/: asset_viewer.html  index.html
dagor-tools/asset-viewer/asset-viewer-comp-editor/: asset_viewer_comp_editor.html  index.html
dagor-tools/asset-viewer/collision-generation/: collision_generation_for_assets.html  index.html
dagor-tools/blk/: blk.html  index.html
dagor-tools/daeditor/: index.html  splines_in_daeditor.html
dagor-tools/daeditor/daeditor/: daeditor.html  index.html
dagor-tools/daeditor/daeditor-console-commands/: daeditor_console_commands.html  index.html
dagor-tools/daeditor/navmesh/: index.html  navmesh.html
dagor-tools/dag2rires/: dag2rires.html  index.html
dagor-tools/impostor-baker/: impostor_baker.html  index.html
dagor-tools/levels-deps/: index.html  levels_deps.html
dagor-tools/resource-building/: index.html  packages.html  resource_building.html  vromfs.html
dagor-tools/substance-designer/: index.html  substance_designer.html
danetgame-framework/: index.html
danetgame-framework/daNetGame/: index.html
getting-started/: directory_structure.html  how_to_access.html  how_to_build.html  how_to_contribute.html  index.html  license.html
prog/engine/: CMakeLists.txt
prog/engine/baseUtil/: CMakeLists.txt
prog/engine/kernel/: CMakeLists.txt
prog/tools/ShaderCompiler2/: CMakeLists.txt  shSemCode.h
prog/tools/ShaderCompiler2/test/: CMakeLists.txt  test.hlsl
prog/tools/dargbox/: log_vrom_android  log_vrom_darg
samples/: CMakeLists.txt  index.html
samples/dngSceneViewer/prog/: CMakeLists.txt
samples/skiesSample/prog/: CMakeLists.txt
samples/testGI/: CMakeLists.txt
samples/testGI/prog/: CMakeLists.txt
tools/: jam2cmake.py
tutorials/: index.html
tutorials/create-mission-wt/: create_mission_wt.html  index.html
tutorials/dng-non-human-char/: dng_non_human_char.html  index.html
tutorials/wt-designing-vehicle-deformations/: index.html  wt_designing_vehicle_deformations.html
(+102 files in other folders)
